virtualbox (5.0.0~RC2-dfsg-1) UNRELEASED; urgency=medium

  [ Gianfranco Costamagna ]
  * Imported upstream snapshot release.
    - virtualbox 5.0 builds fine with gcc 5.1, removing the
      gcc-4.9 workaround (d/{rules,control})
  * Patch refresh.
  * remove obsolete lintian overrides.
  * add some wrongly removed lintian overrides.
  * Add VBoxDTrace not linked against libc lintian override.
    It seems to really not use libc symbols.
  * d/rules: remove VBoxDTraceR0.debug and strip VBoxDTraceR0.r0
    files.
  * update d/source.lintian-overrides file.
  * Remove some more windows prebuilt files.

 -- Gianfranco Costamagna <costamagnagianfranco@yahoo.it>  Fri, 26 Jun 2015 09:57:04 +0200

virtualbox (4.3.28-dfsg-1) unstable; urgency=medium

  * New upstream release (Closes: #785655).
    - fix for CVE-2015-3456 a.k.a. VENOM (Closes: #785424)
    - patch refresh.
    - remove d/p/37-diff_smap_4.patch.
  * Remove MAKE=kmk on virtualbox{,-guest}-source.files/rules
    (Closes: #785161).
    Upstream doesn't recommend using kmk to build kernel modules.
    this reverts 63fa6b7b86035b53e8d053b894814eccac9ce595
  * Add gbp.conf file.

 -- Gianfranco Costamagna <costamagnagianfranco@yahoo.it>  Thu, 14 May 2015 09:36:52 +0200

virtualbox (4.3.26-dfsg-3) unstable; urgency=medium

  [ Adam Conrad ]
  * Re-work the packaging to account for the kernel modules being shipped in
    the master kernel packages, removing the need for dkms (LP: #1434579):
    - Make the dkms package provide a virtual package matching what the
      kernel packages provide to indicate that they ship the dkms modules.
    - Add an alternate dep from the utils package to the virtual driver.
    - Make the x11 driver package associate with the VGA controller PCI ID.

 -- Gianfranco Costamagna <costamagnagianfranco@yahoo.it>  Wed, 22 Apr 2015 16:16:23 +0200

virtualbox (4.3.26-dfsg-2) experimental; urgency=medium

  [ Gianfranco Costamagna ]
  * remove obsolete lintian overrides.