@@ -4,7 +4,7 @@ out/bin/components /usr/lib/virtualbox
 out/bin/ExtensionPacks /usr/lib/virtualbox
 out/bin/VBoxREM.so /usr/lib/virtualbox
 out/bin/VBox*.so /usr/lib/virtualbox
-out/bin/VBox*.gc /usr/lib/virtualbox
+out/bin/VBox*.rc /usr/lib/virtualbox
 out/bin/VBox*.r0 /usr/lib/virtualbox
 out/bin/VBoxAutostart /usr/lib/virtualbox
 out/bin/VBoxBalloonCtrl /usr/lib/virtualbox
