@@ -6,11 +6,11 @@ virtualbox: shlib-with-non-pic-code usr/lib/virtualbox/VBoxRT.so
 virtualbox: shlib-with-non-pic-code usr/lib/virtualbox/VBoxVMM.so
 virtualbox: shlib-with-non-pic-code usr/lib/virtualbox/components/VBoxC.so
 virtualbox: shlib-with-non-pic-code usr/lib/virtualbox/components/VBoxSVCM.so
-virtualbox: unstripped-binary-or-object usr/lib/virtualbox/VBoxDD2GC.gc
+virtualbox: unstripped-binary-or-object usr/lib/virtualbox/VBoxDD2RC.rc
 virtualbox: unstripped-binary-or-object usr/lib/virtualbox/VBoxDD2R0.r0
-virtualbox: unstripped-binary-or-object usr/lib/virtualbox/VBoxDDGC.gc
+virtualbox: unstripped-binary-or-object usr/lib/virtualbox/VBoxDDRC.rc
 virtualbox: unstripped-binary-or-object usr/lib/virtualbox/VBoxDDR0.r0
-virtualbox: unstripped-binary-or-object usr/lib/virtualbox/VMMGC.gc
+virtualbox: unstripped-binary-or-object usr/lib/virtualbox/VMMRC.rc
 virtualbox: unstripped-binary-or-object usr/lib/virtualbox/VMMR0.r0
 virtualbox: unstripped-binary-or-object usr/lib/virtualbox/ExtensionPacks/Oracle_VBoxDTrace_Extension_Pack/linux.*/VBoxDTraceR0.r0
 virtualbox: setuid-gid-binary usr/lib/virtualbox/VBoxHeadless 6755 root/root
