@@ -4,6 +4,7 @@ virtualbox (5.0.0~RC2-dfsg-1) UNRELEASED; urgency=medium
   * Imported upstream snapshot release.
     - virtualbox 5.0 builds fine with gcc 5.1, removing the
       gcc-4.9 workaround (d/{rules,control})
+  * Update copyright file.
   * Patch refresh.
   * remove obsolete lintian overrides.
   * add some wrongly removed lintian overrides.
@@ -11,6 +12,7 @@ virtualbox (5.0.0~RC2-dfsg-1) UNRELEASED; urgency=medium
     It seems to really not use libc symbols.
   * d/rules: remove VBoxDTraceR0.debug and strip VBoxDTraceR0.r0
     files.
+  * d/rules: sed .gc to .rc (following upstream rename change)
   * update d/source.lintian-overrides file.
   * Remove some more windows prebuilt files.
 
